@@ -1,3 +1,10 @@
+Isoquery trunk
+==============
+UNRELEASED
+
+* Use gettext.h instead of libintl.h, as recommended by GNU gettext
+
+
 Isoquery 0.17
 =============
 26 November 2008
